--- a/website/style.css
+++ b/website/style.css
@@ -42,7 +42,7 @@
 }
 
 #pictureSide {
-    background-image: url("temperature.jpg");
+    background-image: url("pic.jpg");
     min-height: 100%;
     height: 100%;
     background-size: cover;
@@ -56,4 +56,4 @@
     color: white;
     text-align: center;
     margin: auto;
-  }
+}
