Changed the text in the website

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,13 +33,13 @@
           <a class="nav-link" href="#section1">Smart Controls</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section2">Temperature</a>
+          <a class="nav-link" href="#section2">The Purpose</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section3">Volume</a>
+          <a class="nav-link" href="#section3">Profiles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section4">Light</a>
+          <a class="nav-link" href="#section4">Zones</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#section5">Pressure</a>
@@ -57,26 +57,32 @@
     </div>
   </section>
 
+  //This will be the Goal section
   <section id="section2" class="section">
     <div class="container fill">
       <div class="row fill">
         <div class="col" id="pictureSide"></div>
         <div class="col" id="textSide">
           <p>
-            Control the temperature inside your car!
+            The Smart Controls system was created in order to improve 
+            the car experience for all people in the car. It does this by 
+            memorizing each persons ideal car condition so that the car can provide those 
+            ideal conditions
           </p>
         </div>
       </div>
     </div>
   </section>
 
-
+  //Profile Section
   <section id="section3" class="section">
     <div class="container fill">
       <div class="row fill">
         <div class="col" id="textSide">
           <p>
-            Control the volume inside your car!
+            Profiles are the way the system remembers what each person wants in the car.
+            A person can create their own profile and set their preferences in it.
+            The system will then use that profile to optimize 
           </p>
         </div>
         <div class="col" id="pictureSide"></div>
@@ -84,14 +90,18 @@
     </div>
   </section>
 
-
+  //This will be the zones section
   <section id="section4" class="section">
     <div class="container fill">
       <div class="row fill">
         <div class="col" id="pictureSide"></div>
         <div class="col" id="textSide">
           <p>
-            Control the light inside your car!
+            The inside of the car is divided into 3 zones, 1 for the driver seat, 
+            1 for the passenger seat and 1 for the backseat. Each zone can be assigned
+            its own profile and the system will match the profiles preferences with the 
+            conditions detected in the zone. Each zone has its own sensors which are used
+            to see the state of each zone.
           </p>
         </div>
       </div>
