--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,7 @@
       <div class="row fill">
         <div class="col" id="pictureSide"></div>
         <div class="col" id="textSide">
+            <h4>The Goal</h1>
           <p>
             The Smart Controls system was created in order to improve 
             the car experience for all people in the car. It does this by 
@@ -79,6 +80,7 @@
     <div class="container fill">
       <div class="row fill">
         <div class="col" id="textSide">
+            <h4>Profiles</h1>
           <p>
             Profiles are the way the system remembers what each person wants in the car.
             A person can create their own profile and set their preferences in it.
@@ -96,6 +98,7 @@
       <div class="row fill">
         <div class="col" id="pictureSide"></div>
         <div class="col" id="textSide">
+            <h4>Zones</h1>
           <p>
             The inside of the car is divided into 3 zones, 1 for the driver seat, 
             1 for the passenger seat and 1 for the backseat. Each zone can be assigned
