--- a/static/style.css
+++ b/static/style.css
@@ -59,3 +59,37 @@
     text-align: center;
     margin: auto;
 }
+
+
+#DeviceHandlerSide {
+    background-image: url("Device\ Handler.jpg");
+    min-height: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#ZonesSide {
+    background-image: url("Zones.jpg");
+    min-height: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#DashboardSide {
+    background-image: url("Dashboard.jpg");
+    min-height: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
