--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
           <a class="nav-link" href="#section4">Zones</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section5">Pressure</a>
+          <a class="nav-link" href="#section5">Device Handler</a>
         </li>
       </ul>
     </div>
@@ -61,9 +61,9 @@
   <section id="section2" class="section">
     <div class="container fill">
       <div class="row fill">
-        <div class="col" id="pictureSide"></div>
+        <div class="col" id="DashboardSide"></div>
         <div class="col" id="textSide">
-            <h4>The Goal</h1>
+            <h4>The Purpose</h1>
           <p>
             The Smart Controls system was created in order to improve 
             the car experience for all people in the car. It does this by 
@@ -84,7 +84,7 @@
           <p>
             Profiles are the way the system remembers what each person wants in the car.
             A person can create their own profile and set their preferences in it.
-            The system will then use that profile to optimize 
+            The system will then act to get the conditions specificed in the profiles.
           </p>
         </div>
         <div class="col" id="pictureSide"></div>
@@ -96,7 +96,7 @@
   <section id="section4" class="section">
     <div class="container fill">
       <div class="row fill">
-        <div class="col" id="pictureSide"></div>
+        <div class="col" id="ZonesSide"></div>
         <div class="col" id="textSide">
             <h4>Zones</h1>
           <p>
@@ -111,15 +111,18 @@
     </div>
   </section>
 
+  //Device handler
   <section id="section5" class="section">
     <div class="container fill">
       <div class="row fill">
         <div class="col" id="textSide">
           <p>
-            Control the pressure inside your car!
+            Using IOT the system can also control devices connected to the car in order to 
+            make the driving experience better. For example it can mute or lower the 
+            volume of phones if the driver wants to make it quieter. 
           </p>
         </div>
-        <div class="col" id="pictureSide"></div>
+        <div class="col" id="DeviceHandlerSide"></div>
       </div>
     </div>
   </section>
