changed pic size

--- a/static/style.css
+++ b/static/style.css
@@ -84,7 +84,7 @@
 }
 
 #DashboardSide {
-    background-image: url("Dashboard\ -\ Copy.jpg");
+    background-image: url("Dashboard.jpg");
     min-height: 100%;
     height: 100%;
     background-size: cover;
