--- a/templates/index.html
+++ b/templates/index.html
@@ -112,6 +112,7 @@
     <div class="container fill">
       <div class="row fill">
         <div class="col" id="textSide">
+            <h4>Device Handler</h1>
           <p>
             Using IOT the system can also control devices connected to the car in order to 
             make the driving experience better. For example it can mute or lower the 
