added picture for the profile part

--- a/static/style.css
+++ b/static/style.css
@@ -93,3 +93,14 @@
     align-items: center;
     justify-content: center;
 }
+
+#ProfileSide {
+    background-image: url("Profiles.png");
+    min-height: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
