--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
             The system will then act to get the conditions specificed in the profiles.
           </p>
         </div>
-        <div class="col" id="pictureSide"></div>
+        <div class="col" id="ProfileSide"></div>
       </div>
     </div>
   </section>
