--- a/templates/index.html
+++ b/templates/index.html
@@ -60,8 +60,8 @@
   <section id="section2" class="section">
     <div class="container fill">
       <div class="row fill">
-        <div class="col" id="DashboardSide"></div>
-        <div class="col" id="textSide">
+        <div class="col-md-7" id="DashboardSide"></div>
+        <div class="col-md-3" id="textSide">
             <h4>The Purpose</h1>
           <p>
             The Smart Controls system was created in order to improve 
