--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
   </section>
 
   <section id="section2" class="section">
-    <div class="container fill">
+    <div class="container-fluid">
       <div class="row fill">
         <div class="col-md-8" id="DashboardSide"></div>
         <div class="col-md-3" id="textSide">
