--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,29 @@
+html{
+    scroll-behavior: smooth;
+}
+
+#mainPageOG {
+    background: rgba(31, 35, 59, 0.938);
+    background: #1b2a49;
+    background: #39375b;
+    background: #160f30;
+    background: #1E2B34;
+    background: #14222D;
+
+}
 #mainPage {
     background: black;
+    
 }
 
 .navbar-dark {
-    background-color: rgb(0, 0, 0, 0.9);
+    background-color: black;
+    opacity:0.1;
+    transition: opacity 0.5s
 }
-
+.navbar-dark:hover {
+    opacity:1;
+}
 .mr-auto {
     margin: auto;
 }
@@ -16,7 +34,7 @@
 }
 
 .section {
-    height: 100vh;
+    height: 90vh;
 }
 
 #section1{
@@ -25,6 +43,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 95vh;
 }
 
 #jumbo {
@@ -39,6 +58,7 @@
     min-height: 100%;
     height: 100%;
     min-width: 100%;
+    margin-top: 10vh;
 }
 
 #pictureSide {
@@ -62,9 +82,9 @@
 
 #DashboardSide {
     background-image: url("Dashboard.jpg");
-    min-height: 98%;
-    height: 98%;
-    background-size: cover;
+    min-height: 100%;
+    height: 100;
+    background-size: 100% 97%;
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
@@ -75,7 +95,7 @@
     background-image: url("Profiles.png");
     min-height: 100%;
     height: 100%;
-    background-size: cover;
+    background-size: 100% 97%;
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
@@ -83,10 +103,10 @@
 }
 
 #ZonesSide {
-    background-image: url("Zones.jpg");
+    background-image: url("Zones.gif");
     min-height: 100%;
     height: 100%;
-    background-size: cover;
+    background-size: 100% 97%;
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
@@ -94,10 +114,11 @@
 }
 
 #DeviceHandlerSide {
-    background-image: url("Device\ Handler.jpg");
+    background-image: url("DeviceHandler.jpg");
     min-height: 100%;
     height: 100%;
-    background-size: cover;
+    float: right;
+    background-size: 100% 97%;
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
