--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,6 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="56" id="mainPage">
 
-  // NAVBAR
   <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
       aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +47,6 @@
     </div>
   </nav>
 
-  // SECTIONS
   <section id="section1" class="section">
     <div class="jumbotron" id="jumbo">
       <h4>Smart Controls</h1>
@@ -77,7 +75,7 @@
   <section id="section3" class="section">
     <div class="container fill">
       <div class="row fill">
-        <div class="col" id="textSide">
+        <div class="col-md-3" id="textSide">
             <h4>Profiles</h1>
           <p>
             Profiles are the way the system remembers what each person wants in the car.
@@ -85,7 +83,7 @@
             The system will then act to get the conditions specificed in the profiles.
           </p>
         </div>
-        <div class="col" id="ProfileSide"></div>
+        <div class="col-md-8" id="ProfileSide"></div>
       </div>
     </div>
   </section>
@@ -93,8 +91,8 @@
   <section id="section4" class="section">
     <div class="container fill">
       <div class="row fill">
-        <div class="col" id="ZonesSide"></div>
-        <div class="col" id="textSide">
+        <div class="col-md-8" id="ZonesSide"></div>
+        <div class="col-md-3" id="textSide">
             <h4>Zones</h1>
           <p>
             The inside of the car is divided into 3 zones, 1 for the driver seat, 
@@ -111,7 +109,7 @@
   <section id="section5" class="section">
     <div class="container fill">
       <div class="row fill">
-        <div class="col" id="textSide">
+        <div class="col-md-3" id="textSide">
             <h4>Device Handler</h1>
           <p>
             Using IOT the system can also control devices connected to the car in order to 
@@ -119,7 +117,7 @@
             volume of phones if the driver wants to make it quieter. 
           </p>
         </div>
-        <div class="col" id="DeviceHandlerSide"></div>
+        <div class="col-md-8" id="DeviceHandlerSide"></div>
       </div>
     </div>
   </section>
