--- a/static/s.css
+++ b/static/s.css
@@ -1,5 +1,5 @@
-.content {
-    background-color: #16242F;
+.content, .at-ease-nav {
+    background-color: #16242F !important;
 }
 .page-title {
     font-size: 5vh;
@@ -19,11 +19,11 @@
     padding-top: 3rem !important;
     width: 90vw;
 }
-.step-caption, .header-content, .step-caption:hover {
+.step-caption, .header-content, .step-caption:hover, .about-text {
     color: white;/* #FDBF09;*/
     display: block;
     z-index: 10;
-    padding: 3vh 10px;
+    padding: 3vh;
     text-align: left !important;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-decoration: none;
@@ -33,7 +33,7 @@
     top: 50vh;
 }
 #list-item-3 {
-    height: 50vh;
+    height: 60vh;
 }
 #steps {
     position: fixed;
