--- a/templates/i4.html
+++ b/templates/i4.html
@@ -18,21 +18,23 @@
 </head>
 
 <body>
-<nav class="navbar navbar-dark bg-dark" id="dit-nav">
-    <ul class="nav justify-content-end">
-        <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Gallery</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">How it works</a>
-        </li>
-    </ul>
+<nav class="at-ease-nav navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">How it works</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Gallery</a>
+            </li>
+        </ul>
+    </div>
 </nav>
 <div class="row content">
     <div class="row">
@@ -81,6 +83,9 @@
         </div>
     </div>
 </div>
+<footer class="content mx-auto">
+    <p>Copyright 2019</p>
+</footer>
 <script>
 
 $("#steps a").on('click', function(event) {
@@ -97,7 +102,6 @@ $(document).ready(function() {
     var windowHeight = $(window).height()
     var topOfCommercial = $("#commercial-video").offset().top;
     var heightCommercial = $("#commercial-video").outerHeight();
-    var endOfNav = $("#dit-nav").offset().top;
     var heightImage = $("#list-item-1").outerHeight();
     var topOfFirstImage = $("#car-zone-image").offset().top;
     var topOfSecondImage = $("#list-item-2").offset().top;
@@ -105,21 +109,24 @@ $(document).ready(function() {
     $("#steps").hide();
     $(window).scroll(function() {
         if($(this).scrollTop() < topOfSecondImage){
-            $("#step-one-caption").css("opacity", 1);
-            $("#step-two-caption").css("opacity", 0.5);
-            $("#step-three-caption").css("opacity", 0.5);
+            $("#step-one-caption").css({"opacity": 1, "border-left": "3px solid white"});
+            $("#step-two-caption").css({"opacity": 0.5, "border": "none"});
+            $("#step-three-caption").css({"opacity": 0.5, "border": "none"});
         }
         else if($(this).scrollTop() > topOfFirstImage && $(this).scrollTop() < topOfThirdImage ){
-            $("#step-one-caption").css("opacity", 0.5);
-            $("#step-two-caption").css("opacity", 1);
-            $("#step-three-caption").css("opacity", 0.5);
+            $("#step-one-caption").css({"opacity": 0.5, "border": "none"});
+            $("#step-two-caption").css({"opacity": 1, "border-left": "3px solid white"});
+            $("#step-three-caption").css({"opacity": 0.5, "border": "none"});
         } else if($(this).scrollTop() > (topOfSecondImage+(heightImage/2))){
-            $("#step-one-caption").css("opacity", 0.5);
-            $("#step-two-caption").css("opacity", 0.5);
-            $("#step-three-caption").css("opacity", 1);
+            $("#step-one-caption").css({"opacity": 0.5, "border": "none"});
+            $("#step-two-caption").css({"opacity": 0.5, "border": "none"});
+            $("#step-three-caption").css({
+                "opacity": 1, 
+                "border-left": "3px solid white"
+            });
         }
-        if($(this).scrollTop() > topOfCommercial+(heightCommercial*2/3)) { 
-            $("#steps").fadeIn(700); 
+        if($(this).scrollTop() > topOfCommercial+heightCommercial*3-30) { 
+            $("#steps").fadeIn(600); 
         } else {
             $("#steps").hide();
         }
