--- a/static/s.css
+++ b/static/s.css
@@ -31,18 +31,18 @@ html, body {
     text-decoration: none;
 }
 #step-media {
-    /*height: 100vh;*/
     margin-top: 15vh;
 }
 .step-media {
     height: 100vh;
+    margin-bottom: 15vh;
 }
 #list-item-3 {
     height: 60vh;
 }
 #steps {
     position: fixed;
-    bottom: 30vh;
+    bottom: 10%;
     z-index: 5;
 }
 h2 {
@@ -50,4 +50,5 @@ h2 {
 }
 img {
     max-height: 750px;
+    height: 90%;
 }
