--- a/templates/base.html
+++ b/templates/base.html
@@ -18,20 +18,21 @@
 </head>
 
 <body>
-    <nav class="at-ease-nav navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-        <div class="collapse navbar-collapse" id="navbarNav">
+    <nav class="at-ease-nav navbar sticky-top navbar-expand-lg navbar-dark bg-dark col-sm-12 mb-4">
+        <a class="navbar-brand" href="/">At Ease</a>
+        <div class="collapse navbar-collapse col-sm-12" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
+                <li class="nav-item ml-5">
+                    <a class="nav-link mx-auto" href="/">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about">About</a>
+                <li class="nav-item ml-5">
+                    <a class="nav-link mx-auto" href="about">About</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">How it works</a>
+                <li class="nav-item ml-5">
+                    <a class="nav-link mx-auto" href="/how-it-works">How it works</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Gallery</a>
+                <li class="nav-item ml-5">
+                    <a class="nav-link mx-auto" href="#">Gallery</a>
                 </li>
             </ul>
         </div>
