--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="row content">
-    <div class="row">
-        <div id="page-header" class="col-sm-12 col-md-12 col-lg-12 mx-auto">
-            <div class="header-content d-block">
-                <h5 class="page-title">At Ease</h5>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-12">
+    <div class="col-sm-12 mt-5">
         <div class="col-sm-11 col-md-11 col-lg-11 pb-5 embed-responsive embed-responsive-16by9 mx-auto" id="commercial-video">
             <video autoplay muted id="video1" loop class="d-block mx-auto">
                 <source src="../static/mobizen_20191202_120752.mp4" type="video/mp4">
@@ -37,40 +30,41 @@
     
         <div id="step-media" data-spy="scroll" data-target="#steps" data-offset="0" class="col-sm-6 mx-auto float-right">
             <div class="step-media" id="list-item-1">
-                <img id="car-zone-image" src="../static/img/car-selected-zone.PNG" class="d-block" />
+                <img id="car-zone-image" src="../static/img/car-selected-zone.PNG" class="d-block img-fluid" />
             </div>
             <div class="step-media" id="list-item-2">
-                <img id="dashboard-image" src="../static/img/dashboard-left-side.PNG" class="d-block" />
+                <img id="dashboard-image" src="../static/img/dashboard-left-side.PNG" class="d-block img-fluid" />
             </div>
             <div class="step-media" id="list-item-3">
-                <img id="smiley-image" src="../static/img/smiley.png" class="d-block" />
+                <img id="smiley-image" src="../static/img/smiley.png" class="d-block img-fluid" />
             </div>
         </div>
     </div>
 </div>
 <script>
-$("#steps a").on('click', function(event) {
-    if (this.hash !== "") {
-        event.preventDefault();
-        var hash = this.hash;
-        $('html, body').animate({
-            scrollTop: $(hash).offset().top - ($(window).height()/4)
-        }, 800);
-        $(hash).css("opacity", 1);
-    }
-}); 
 $(document).ready(function() {
     var windowHeight = $(window).height()
     var topOfCommercial = $("#video1").offset().top;
-    var topOfPageHeader = $("#page-header").offset().top;
     var heightCommercial = $("#video1").outerHeight();
     var heightImage = $("#list-item-1").outerHeight();
     var topOfFirstImage = $("#car-zone-image").offset().top;
     var topOfSecondImage = $("#list-item-2").offset().top;
     var topOfThirdImage = $("#list-item-3").offset().top;
     $("#steps").hide();
+    $(window).resize(function() {
+        windowHeight = $(window).height()
+        topOfCommercial = $("#video1").offset().top;
+        heightCommercial = $("#video1").outerHeight();
+        heightImage = $("#list-item-1").outerHeight();
+        topOfFirstImage = $("#car-zone-image").offset().top;
+        topOfSecondImage = $("#list-item-2").offset().top;
+        topOfThirdImage = $("#list-item-3").offset().top;
+    });
+
     $(window).scroll(function() {
-        if($(this).scrollTop() > (topOfCommercial+heightCommercial/2) && $(this).scrollTop() < topOfFirstImage+(heightImage/2)){
+        console.log($(this).scrollTop());
+        console.log(heightCommercial);
+        if($(this).scrollTop() > (topOfCommercial+heightCommercial*4/5) && $(this).scrollTop() < topOfFirstImage+(heightImage/2)){
             $("#step-one-caption").css({"opacity": 1, "border-left": "3px solid white"});
             $("#step-two-caption").css({"opacity": 0.5, "border": "none"});
             $("#step-three-caption").css({"opacity": 0.5, "border": "none"});
@@ -85,12 +79,32 @@ $(document).ready(function() {
             $("#step-two-caption").css({"opacity": 0.5, "border": "none"});
             $("#step-three-caption").css({"opacity": 1, "border-left": "3px solid white"});
         }
-        if($(this).scrollTop() > topOfCommercial+heightCommercial*3/4) { 
-            $("#steps").fadeIn(600); 
+        if(windowHeight > 1100){
+            if($(this).scrollTop() > topOfCommercial+heightCommercial/2) { 
+                $("#steps").fadeIn(600); 
+            } else {
+                $("#steps").hide();
+            }
         } else {
-            $("#steps").hide();
+            if($(this).scrollTop() > topOfCommercial+heightCommercial*4/5) { 
+                $("#steps").css({"bottom": "15%"});
+                $("#steps").fadeIn(600); 
+            } else {
+                $("#steps").hide();
+            }
         }
     });
 });
+
+$("#steps a").on('click', function(event) {
+    if (this.hash !== "") {
+        event.preventDefault();
+        var hash = this.hash;
+        $('html, body').animate({
+            scrollTop: $(hash).offset().top - ($(window).height()/4)
+        }, 800);
+        $(hash).css("opacity", 1);
+    }
+}); 
 </script>
 {% endblock %}
