--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                     <a class="nav-link mx-auto" href="/how-it-works">How it works</a>
                 </li>
                 <li class="nav-item ml-5">
-                    <a class="nav-link mx-auto" href="#">Gallery</a>
+                    <a class="nav-link mx-auto" href="/gallery">Gallery</a>
                 </li>
             </ul>
         </div>
