--- a/static/s.css
+++ b/static/s.css
@@ -85,7 +85,8 @@ h2 {
     text-align: center;
 }
 .carousel {
-    width: 600px;
+    max-width: 60vw;
+    width: 60vw;
 }
 ul {
     list-style: none;
@@ -96,4 +97,8 @@ ul > li {
 }
 .img-thumbnail {
     background-color: #16242F !important;
+}
+.carousel-item > img {
+    height: 60vh;
+    width: 60vw;
 }
