--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,22 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="row content">
-    <div class="col-sm-12 gallery-header mb-5">
+    <div class="col-sm-12 gallery-header mb-4">
         <h1>Behind the Scenes</h1>
     </div>
-    <div class="col-sm-12">
+    <div class="col-sm-12 mx-auto">
         <div class="row">
-            <div id="gallery-carousel" class="carousel slide image-slide mx-auto my-5" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../static/img/smiley.png" />
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../static/img/smiley.png" />
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../static/img/smiley.png" />
-                    </div>
+            <div id="gallery-carousel" class="carousel slide mx-auto image-slide my-4" data-ride="carousel">
+                <div class="carousel-inner" id="inner-carousel">
+                    {% for item in images %}
+                        <div class="carousel-item">
+                            <img src="../static/img/team-images/{{ item }}" />
+                        </div>
+                    {% endfor %}
                 </div>
                 <a class="carousel-control-prev" href="#gallery-carousel" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -29,25 +25,22 @@
             </div>
         </div>
         <div class="row mt-5">
-            <div class="col-sm-12">
-                <ul class="col-sm-10">
-                    <li data-target="#gallery-carousel" data-slide-to="0" class="col-sm-2">
-                        <img src="../static/img/smiley.png" class="img-thumbnail" />
-                    </li>
-                    <li data-target="#gallery-carousel" data-slide-to="1" class="col-sm-2">
-                        <img src="../static/img/smiley.png" class="img-thumbnail" />
-                    </li>
-                    <li data-target="#gallery-carousel" data-slide-to="2" class="col-sm-2">
-                        <img src="../static/img/smiley.png" class="img-thumbnail" />
-                    </li>
-                    <li data-target="#gallery-carousel" data-slide-to="2" class="col-sm-2">
-                        <img src="../static/img/smiley.png" class="img-thumbnail" />
-                    </li>
+            <div class="col-sm-10 mx-auto">
+                <ul>
+                    {% for i in range (0, len) %}
+                        <li data-target="#gallery-carousel" data-slide-to="{{i}}" class="col-sm-2 my-3">
+                            <img src="../static/img/team-images/{{ images[i] }}" class="img-thumbnail" />
+                        </li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
     </div>
 </div>
 <script>
+    $(document).ready(function() {
+        $("#inner-carousel").children().first().addClass('active');
+    });
+
 </script>
 {% endblock %}
