adds website text in how it works and changes the name everywhere

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,9 +14,9 @@
                 </p>
             </div>
             <div class="about-section pb-3 my-5">
-                <h2>Why did we make At Ease?</h2>
+                <h2>Why did we make <strong>Comfort Zone</strong>?</h2>
                 <p>Being comfortable in your car is essential, whether you're taking a short city drive on a hot summer day 
-                    or driving across country on a cold winter night. With At Ease you not only have a full overview of the 
+                    or driving across country on a cold winter night. With <strong>Comfort Zone</strong> you not only have a full overview of the 
                     interior environment of your car, but you have the ability to adjust temperature, sound levels, air 
                     pressure and so much more at a press of your fingertips.
                 </p>
