--- a/templates/how-it-works.html
+++ b/templates/how-it-works.html
@@ -11,9 +11,11 @@
                     <h3>Change the Temperature in a Zone</h3>
                 </div>
                 <div class="col-sm-6 how-it-works-text">
-                    <p class="mx-auto">We are a group of seven students at the Software Engineering and Management program
-                        in Gothenburg University. In the fall semester of 2019 we were offered the chance 
-                        to collaborate with APTIV on a proof of concept project. 
+                    <p class="mx-auto">
+                        <strong>Comfort Zone</strong> allows you to customize every passenger’s environment with ease. 
+                        Change your temperature, sound levels and more with the press of a button. Thanks 
+                        to our zone management system, every zone in the car is customizable to tailor 
+                        the needs of everyone inside.
                     </p>
                 </div>
                 <div class="col-sm-6">
@@ -36,9 +38,11 @@
                     </div>
                 </div>
                 <div class="col-sm-6 how-it-works-text">
-                    <p class="mx-auto">We are a group of seven students at the Software Engineering and Management program
-                        in Gothenburg University. In the fall semester of 2019 we were offered the chance 
-                        to collaborate with APTIV on a proof of concept project. 
+                    <p class="mx-auto">
+                        <strong>Comfort Zone</strong> also ships with several premade 
+                        profiles that adapt to a variety of weather conditions and situations. 
+                        Instead of tuning the whole system every morning, pick a single profile 
+                        that fits your needs at the time. 
                     </p>
                 </div>
             </div>
@@ -47,9 +51,11 @@
                     <h3>Add a new Environmental Mode</h3>
                 </div>
                 <div class="col-sm-6 how-it-works-text">
-                    <p class="mx-auto">We are a group of seven students at the Software Engineering and Management program
-                        in Gothenburg University. In the fall semester of 2019 we were offered the chance 
-                        to collaborate with APTIV on a proof of concept project. 
+                    <p class="mx-auto">
+                        If none of the available profiles fit you, you are welcome to add 
+                        your own. Whether you have frequent passengers or a specific way you 
+                        like your car in the morning, you can save your options and reuse 
+                        them at a moment’s notice.
                     </p>
                 </div>
                 <div class="col-sm-6">
@@ -72,9 +78,12 @@
                     </div>
                 </div>
                 <div class="col-sm-6 how-it-works-text">
-                    <p class="mx-auto">We are a group of seven students at the Software Engineering and Management program
-                        in Gothenburg University. In the fall semester of 2019 we were offered the chance 
-                        to collaborate with APTIV on a proof of concept project. 
+                    <p class="mx-auto">
+                        Want to take customization to the next level? You can also adjust 
+                        the devices connected to <strong>Comfort Zone</strong>. Any Android devices 
+                        connected to the system can have their volumes adjusted. Whether you
+                        want some peace while driving or to kick the fun up a notch, you are 
+                        in complete control.
                     </p>
                 </div>
             </div>
