--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>At Ease</title>
+    <title>Comfort Zone</title>
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='s.css') }}" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,7 +19,7 @@
 
 <body>
     <nav class="at-ease-nav navbar sticky-top navbar-expand-lg navbar-dark bg-dark col-sm-12 mb-4">
-        <a class="navbar-brand" href="/">At Ease</a>
+        <a class="navbar-brand" href="/">Comfort Zone</a>
         <div class="collapse navbar-collapse col-sm-12" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item ml-5">
