--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <div class="row content">
     <div class="col-sm-6 mx-auto about-text">
         <div class="team-image col-sm-12 pb-5">
-            <img class="img-fluid" src="../static/img/team.png" />
+            <img class="img-fluid" src="../static/img/team.jpg" />
         </div>
         <div class="about">
             <div class="about-section pb-3 my-4">
