changes class name of nav

--- a/static/s.css
+++ b/static/s.css
@@ -2,7 +2,7 @@ html, body {
     min-height: 110%;
     background-color: #16242F !important;
 }
-.content, .at-ease-nav {
+.content, .comfort-zone-nav {
     background-color: #16242F !important;
     color: white;
 }
