--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <nav class="at-ease-nav navbar sticky-top navbar-expand-lg navbar-dark bg-dark col-sm-12 mb-4">
+    <nav class="comfort-zone-nav navbar sticky-top navbar-expand-lg navbar-dark bg-dark col-sm-12 mb-4">
         <a class="navbar-brand" href="/">Comfort Zone</a>
         <div class="collapse navbar-collapse col-sm-12" id="navbarNav">
             <ul class="navbar-nav">
