--- a/static/s.css
+++ b/static/s.css
@@ -3,8 +3,8 @@ html, body {
     background-color: #16242F !important;
 }
 p{
-    font-family: "Times New Roman";
-    font-size: 20px;
+    font-family: "sans-serif";
+    font-size: 1.2em;
     /*font-family: Arial;*/
 }
 h1, h2, h4, a{
